[gd_scene load_steps=4 format=3 uid="uid://dgwu35c68nwj"]

[ext_resource type="Script" path="res://objects/spaceship_prefab.gd" id="1_vyhkg"]
[ext_resource type="Texture2D" uid="uid://2tqkqdvyvs6" path="res://assets/gfx/SpaceShooterAssetPack_Ships.png" id="2_yck7j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kokrg"]
size = Vector2(8, 8)

[node name="SpaceshipPrefab" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_vyhkg")

[node name="ShipSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_yck7j")
hframes = 10
vframes = 10
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kokrg")

[node name="ShotNode2D0" type="Node2D" parent="."]
position = Vector2(-1.5, -2.5)

[node name="ShotNode2D1" type="Node2D" parent="."]
position = Vector2(1.5, -2.5)
